fix overflow

--- a/_sass/jekyll-news.scss
+++ b/_sass/jekyll-news.scss
@@ -67,6 +67,7 @@ hr {
 }
 
 .nav-link {
+  display: inline-block;
   color: black;
   text-decoration: none;
   padding-left: 10px;
